Crash in AudioResampler
Categories
(Core :: Audio/Video: MediaStreamGraph, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox80 | --- | fixed |
People
(Reporter: achronop, Assigned: achronop)
References
Details
Attachments
(1 file)
The crash is reproduced only with a gtest. It came up accidentally and revealed a problem in AudioResampler used as a part of AudioDriftCorrection. I have been using AudioDriftCorrection for some time now, in real life, and I have not come across it so I guess the crash rate is low. However, we need to fix in the run up to pref on setsinkid.
Assignee | ||
Comment 1•5 years ago
|
||
In AudioResampler the resampling of a buffer happens on pieces of 128 or 256 frames. Before resampling, the number of available frames is checked for the whole buffer and for the individual smaller pieces. When the whole buffer is checked we need to check for one extra frame in order to compensate the case that one individual resampling has consumed an extra frame, something that is normal and happens periodically.
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Without the fix it reproduces in every platform:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=18c9328234029757bc6b2edb6fb9879aa9d8a461
Comment 4•5 years ago
|
||
bugherder |
Description
•