Bug 1648732 - Fine tune the check for available frames in AudioResampler. r=padenot

In AudioResampler the resampling of a buffer happens on pieces of 128 or 256 frames. Before resampling, the number of available frames is checked for the whole buffer and for the individual smaller pieces. When the whole buffer is checked we need to check for one extra frame in order to compensate the case that one individual resampling has consumed an extra frame, something that is normal and happens periodically.

Differential Revision: https://phabricator.services.mozilla.com/D81321